--- a/.github/workflows/backup.yaml
+++ b/.github/workflows/backup.yaml
@@ -38,7 +38,7 @@ jobs:
           echo "Downloading repositories for" $BACKUP_GITHUB_OWNER
 
 
-          gh repo list $BACKUP_GITHUB_OWNER --json "name" --limit 1000 --template '{{range .}}{{ .name }}{{"\n"}}{{end}}' | xargs -L1 -I {} git clone --mirror https://${BACKUP_GITHUB_OWNER}:{BACKUP_GITHUB_PAT}@github.com/$BACKUP_GITHUB_OWNER/{} 
+          gh repo list $BACKUP_GITHUB_OWNER --json "name" --template '{{range .}}{{ .name }}{{"\n"}}{{end}}' | xargs -L1 -I {} git clone --mirror https://${BACKUP_GITHUB_OWNER}:{BACKUP_GITHUB_PAT}@github.com/$BACKUP_GITHUB_OWNER/{} 
 
 
           for f in */; do mkdir -p $f/.git; done
