--- a/.github/workflows/backup.yaml
+++ b/.github/workflows/backup.yaml
@@ -44,7 +44,7 @@ jobs:
           
           echo "Downloading repositories for" $BACKUP_GITHUB_OWNER
 
-          gh repo list $BACKUP_GITHUB_OWNER --json "name" --limit 1000 --template '{{range .}}{{ .name }}{{"\n"}}{{end}}' | xargs -I -L1 {} git clone --mirror https://${BACKUP_GITHUB_OWNER}:{BACKUP_GITHUB_PAT}@github.com/$BACKUP_GITHUB_OWNER/{} 
+          gh repo list $BACKUP_GITHUB_OWNER --json "name" --limit 1000 --template '{{range .}}{{ .name }}{{"\n"}}{{end}}' | xargs -L1 -I {} git clone --mirror https://${BACKUP_GITHUB_OWNER}:{BACKUP_GITHUB_PAT}@github.com/$BACKUP_GITHUB_OWNER/{} 
 
           echo $?
           #for f in */; do mkdir -p $f/.git; done
