--- a/.github/workflows/Backup GitHub to AWS S3 with Automatic creation of AWS CodeCommit Repos.yaml
+++ b/.github/workflows/Backup GitHub to AWS S3 with Automatic creation of AWS CodeCommit Repos.yaml
@@ -1,4 +1,4 @@
-name: Backup GitHub Org/Repos to AWS S3 with Automatic creation of AWS CodeCommit Repos
+name: Backup GitHub to AWS S3 with Automatic creation of AWS CodeCommit Repos
 
 on:
   workflow_dispatch:
